force-app/main/default/objects/Quotation_Item__c/fields/Total_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Weight__c</fullName>
    <label>Total Gross Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>