force-app/main/default/objects/Quotation_Item__c/fields/Total_INCO__c.field-meta.xml
<CustomField>
    <fullName>Total_INCO__c</fullName>
    <label>Total Origin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>