force-app/main/default/objects/Quotation_Item__c/fields/Total_Selling_ExWorks_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_ExWorks_Charge__c</fullName>
    <label>Total Selling ExWorks Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>