force-app/main/default/objects/Quotation_Item__c/fields/Truck_idling_charges__c.field-meta.xml
<CustomField>
    <fullName>Truck_idling_charges__c</fullName>
    <label>Truck idling charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>