force-app/main/default/objects/Quotation_Item__c/fields/VGM__c.field-meta.xml
<CustomField>
    <fullName>VGM__c</fullName>
    <label>VGM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>