force-app/main/default/objects/Quotation_Item__c/fields/Wrappingpacking_charges__c.field-meta.xml
<CustomField>
    <fullName>Wrappingpacking_charges__c</fullName>
    <label>Wrapping/packing charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>