force-app/main/default/objects/Quotation_Item__c/fields/Xray__c.field-meta.xml
<CustomField>
    <fullName>Xray__c</fullName>
    <label>Xray</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>