force-app/main/default/objects/Quotation_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quotation__c</columns>
    <columns>Route__c</columns>
    <columns>RMS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>