force-app/main/default/objects/Quotation_Item__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Quotation__c</columns>
    <columns>Sea_Freight__c</columns>
    <columns>Total_INCO__c</columns>
    <columns>Total_SL__c</columns>
    <columns>Total__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>